<resources>
    <string name="app_name">Tempo</string>
    <string name="action_settings">Configurações</string>
    <string name="title_activity_detail">Detalhe</string>
    <string name="city_zipcode">City ZipCode</string>
</resources>
